# hexlet-django-blog

./: db.sqlite3  manage.py  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py  wsgi.py
hexlet_django_blog/article/: admin.py  apps.py  models.py  urls.py  views.py
hexlet_django_blog/article/templates/articles/: index.html
hexlet_django_blog/templates/: base.html  index.html
